fixes search box text wrap & nav alignment

--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -1,87 +1,80 @@
-body > header {
+body > header, body > nav {
   background-color: @mstred;
-  background: linear-gradient(@mstred, darken(@mstred, 5%));
-  color: white;
-  padding: 5px;
-  box-shadow: 0 5px 5px -5px black;
+}
 
-  div {
-    display: inline;
-    padding: 0 4% 0 4%;
-  }
+body > header {
+  padding: 20px 0 10px;
+  text-align: center;
+  color: white;
 
   img {
     height: 60px;
   }
 
   h1 {
+    display: inline;
+    vertical-align: middle;
     margin: 0;
+    margin-left: 5px;
     font-size: 40px;
     font-weight: 100;
     text-shadow: 1px 1px black;
-    display: inline;
-    vertical-align: middle;
-    margin-left: 5px;
   }
+}
 
-  nav {
-    padding-bottom: 5px;
-    width: 100%;
-    height: 70px;
-    text-align: left;
-    padding-top: 18px;
-    display: inline;
+body > nav {
+  padding-bottom: 5px;
+  box-shadow: 0 5px 5px -5px black;
+  background: linear-gradient(@mstred, darken(@mstred, 5%));
 
-    ul {
-      display: inline-block;
-      border: none;
-      margin: 0 20px;
-      padding: 5px 0;
-      list-style: none;
-      width: auto;
-      font-size: 0.9em;
-      text-align: center;
+  ul {
+    margin: 0 20px;
+    padding: 5px 0;
+    list-style: none;
+    width: auto;
+    font-size: 0.9em;
+    text-align: center;
 
-      li {
-        display: inline;
+    li {
+      display: inline;
 
-        a {
-          display: inline-block;
-          color: lightgray;
-          &:hover {
-            color: white;
-          }
+      a {
+        display: inline-block;
+        color: lightgray;
+        &:hover {
+          color: white;
         }
-      }
-
-      li + li {
-        margin-left: 15px; 
-      }
-
-      li:hover {
-        ul.dropdown-menu {
-          display: block;
-        }
-      }
-
-      .dropdown a:first-child:nth-last-child(2):after {
-        content: " ▾"
       }
     }
 
-    ul.dropdown-menu {
-      text-align: left;
+    li + li {
+      margin-left: 15px; 
+    }
 
-      li {
-        margin-left: 0px;
+    li:hover {
+      ul.dropdown-menu {
+        display: block;
       }
+    }
+
+    li.dropdown {
+      a:first-child:nth-last-child(2):after {
+        content: " ▾"
+      }
+    }
+  }
+
+  ul.dropdown-menu {
+    text-align: left;
+
+    li {
+      margin-left: 0px;
     }
   }
 
   form[name='search'] {
-    display: inline-block;
-    width: 150px; 
-    margin: auto;
+    display: block;
+    margin: 0 20px;
     padding: 5px 0;
     text-align: center;
     position: relative;
@@ -100,7 +93,6 @@ body > header {
       border-style: none;
       border-radius: 2px;
       box-shadow: inset 2px 1px 2px rgba(0, 0, 0, 0.5);
-      color: black;
     }
 
     #search:focus {
@@ -110,15 +102,40 @@ body > header {
   }
 }
 
-@media(max-width: @screen-md){
-  body > header {
-    text-align: center;
-  
-    div {
-      display: block;
-    }
+@media(min-width: @screen-xs) {
+  body > nav {
     form[name='search'] {
-      display: block;
+      width: 200px; 
+      margin: auto;
     }
   }
 }
+
+@media(min-width: @screen-md) {
+  body > header {
+    width: 16%;
+    float: left;
+    padding: 5px;
+    text-align: center;
+    background: linear-gradient(@mstred, darken(@mstred, 5%));
+  }
+
+  body > nav {
+    width: 100%;
+    height: 70px;
+    text-align: left;
+    padding-top: 18px;
+
+    ul {
+      display: inline-block;
+      border: none;
+    }
+
+    form[name='search'] {
+      display: inline-block;
+      width: 150px; 
+      margin: auto;
+    }
+  }
+}
+
